Add all project files.

--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
     <TextView
+        android:id="@+id/txtViewCustomerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/CIF">
-    </TextView>
-
+        android:text="Customer Name"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
     <TextView
+        android:id="@+id/txtViewCityState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/CustomerName">
-    </TextView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/CityState">
-    </TextView>
+        android:layout_marginLeft="10dp"
+        android:text="CSZ"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 </LinearLayout>
